--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,72 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Survey</title>
+    <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <!-- <style>
-        .navbar{
-            background-color: #ffffff;
-        }
 
-        .slidecontainer {
-            width: 100%;
-        }
-
-        .slider {
-            -webkit-appearance: none;
-            width: 100%;
-            height: 10px;
-            border-radius: 5px;
-            background: #d3d3d3;
-            outline: none;
-            opacity: 0.7;
-            -webkit-transition: .2s;
-            transition: opacity .2s;
-        }
-
-        .slider:hover {
-            opacity: 1;
-        }
-
-        .slider::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            width: 23px;
-            height: 24px;
-            border: 0;
-            background-color: #070735;
-            /* cursor: pointer; */
-        }
-
-        .slider::-moz-range-thumb {
-            width: 23px;
-            height: 24px;
-            border: 0;
-            background-color: #070735;
-            cursor: pointer;
-        }
-
-        #american {
-            padding: 15px;
-            background-color: aquamarine;
-        }
-
-        #italian {
-            background-color: rgb(67, 129, 109);
-            padding: 15px;
-        }
-
-        #japanese {
-            background-color: rgb(165, 206, 192);
-            padding: 15px;
-        }
-
-        #submitSurvey {
-            margin-top:20px;
-            margin-bottom: 100px
-        }
-    </style> -->
 </head>
 
 <body>
@@ -87,6 +27,11 @@
         <div class="row">
             <div class="input-group mb-3">
                 <input id="name" type="text" class="form-control" placeholder="Your Name" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-group mb-3">
+                <input class="form-control" type="text" placeholder="Photo Link" id="photo">
             </div>
         </div>
         <div class="row" id="american">
@@ -119,9 +64,11 @@
     </div>
     <div class="container">
         <div class="row">
-            <button type="submit" id="submitSurvey" class="btn btn-secondary btn-lg btn-block">FIND YOUR NEW FRIEND >></button>
+            <button type="submit" id="submit" class="btn btn-secondary btn-lg btn-block">FIND YOUR NEW FRIEND >></button>
         </div>
     </div>
+
+    <!-- FOOTER -->
     <div class="navbar navbar-default fixed-bottom ">
         <div class="container footer-txt">
             <div class="justify-content-end">
@@ -136,15 +83,34 @@
             </div>
         </div>
     </div>
+    <!-- MODAL -->
+    <div id="results-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title">
+                        <strong>Best Match</strong>
+                    </h2>
+                </div>
+                <div class="modal-body">
+                    <h2 id="match-name"></h2>
+                    <img id="match-img" src="https://www.pexels.com/search/summer/" alt="">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
 
+    </div>
+    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script>
+    <script type="text/javascript">
         var slider1 = document.getElementById("aRange");
         var output1 = document.getElementById("aSlider");
         output1.innerHTML = slider1.value;
@@ -168,24 +134,27 @@
         }
 
         // gets answers from survey
-        $("#submitSurvey").on("click", function (event) {
+        $("#submit").on("click", function (event) {
             event.preventDefault();
             console.log("You Clicked!");
             var newFriend = {
-                Name: $("#name").val().trim(),
-                Burger: slider1.value,
-                Pizza: slider2.value,
-                Sushi: slider3.value,
+                name: $("#name").val().trim(),
+                image: $("#photo").val().trim(),
+                scores: [slider1.value, slider2.value, slider3.value,]
             };
             console.log(newFriend);
             // posts new friend to api
-            $.post("/api/friends", newFriend)
-                .then(function (data) {
-                    console.log(data);
-                    alert("Adding a friend...");
-                });
+            $.post("/api/friends", newFriend, function (data) {
+                data = JSON.parse(data);
+                if (data) {
+                    $("#match-name").text(data.name);
+                    $("#match-img").attr("src", data.photo);
+                    $("#results-modal").modal("toggle");
+                } else console.log("error?")
+            });
         });
     </script>
+
 </body>
 
 </html>
