working but not so pretty modal!

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -67,7 +67,24 @@
             <button type="submit" id="submit" class="btn btn-secondary btn-lg btn-block">FIND YOUR NEW FRIEND >></button>
         </div>
     </div>
-
+    <!-- MODAL -->
+    <div id="results-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title">Best Match</h2>
+                </div>
+                <div class="modal-body">
+                    <h2 id="match-name"></h2>
+                    <img id="match-img" src="" alt="">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- FOOTER -->
     <div class="navbar navbar-default fixed-bottom ">
         <div class="container footer-txt">
@@ -83,27 +100,7 @@
             </div>
         </div>
     </div>
-    <!-- MODAL -->
-    <div id="results-modal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h2 class="modal-title">
-                        <strong>Best Match</strong>
-                    </h2>
-                </div>
-                <div class="modal-body">
-                    <h2 id="match-name"></h2>
-                    <img id="match-img" src="https://www.pexels.com/search/summer/" alt="">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
 
-    </div>
     <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -141,17 +138,27 @@
                 name: $("#name").val().trim(),
                 image: $("#photo").val().trim(),
                 scores: [slider1.value, slider2.value, slider3.value,]
+
+
             };
-            console.log(newFriend);
+            
             // posts new friend to api
             $.post("/api/friends", newFriend, function (data) {
                 data = JSON.parse(data);
+                console.log("hi: " + data);
                 if (data) {
+
+                    console.log("hi");
                     $("#match-name").text(data.name);
                     $("#match-img").attr("src", data.photo);
                     $("#results-modal").modal("toggle");
+                    // $('#results-modal').modal(show);
                 } else console.log("error?")
             });
+
+console.log("lalalala: "+newFriend);
+
+
         });
     </script>
 
