fixed image to photo

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -172,7 +172,7 @@
             console.log("You Clicked!");
             var newFriend = {
                 name: $("#name").val().trim(),
-                image: $("#photo").val().trim(),
+                photo: $("#match-img").val().trim(),
                 scores: [slider1.value, slider2.value, slider3.value,slider4.value,slider5.value]
 
 
