fixed photo id name

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -186,7 +186,7 @@
 
                     console.log("hi");
                     $("#match-name").text(data.name);
-                    $("#match-img").attr("src", data.photo);
+                    $("#photo").attr("src", data.photo);
                     $("#results-modal").modal("toggle");
                     // $('#results-modal').modal(show);
                 } else console.log("error?")
